# vm

./: README.md
complex_num/: Makefile  README.md  main  main.cpp
complex_num/include/: complex_num.h
complex_num/src/: complex_num.cpp
queue/: CMakeLists.txt  README.md
queue/benchmark/: benchmark.cpp
queue/include/: queue.hpp
queue/list/: CMakeLists.txt
queue/list/include/: list.hpp
queue/list/tests/: tests.cpp
queue/src/: queue.cpp
queue/stack/: CMakeLists.txt
queue/stack/include/: stack.hpp
queue/stack/src/: stack_bool.cpp
queue/stack/tests/: tests.cpp
queue/tests/: tests.cpp
stack/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  main.cpp  main1.cpp
stack/include/: stack.h  stack.hpp
stack/src/: stack_bool.cpp
stack/tests/: tests.cpp
teachable_dictionary/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  data.bt  data.txt  text.txt  text_corrected.txt  text_with_errors2.txt
teachable_dictionary/hash_table/: CMakeLists.txt
teachable_dictionary/hash_table/include/: hash_table.hpp
teachable_dictionary/hash_table/tests/: CMakeLists.txt  tests.cpp
teachable_dictionary/include/: teachable_dictionary.hpp
teachable_dictionary/reader/: CMakeLists.txt
teachable_dictionary/reader/include/: reader.hpp
teachable_dictionary/reader/src/: reader.cpp
teachable_dictionary/reader/tests/: CMakeLists.txt  tests.cpp  text.txt
teachable_dictionary/src/: main.cpp  teachable_dictionary.cpp
teachable_dictionary/tests/: CMakeLists.txt  tests.cpp
teachable_dictionary/tests/data_base/: data.bt  data.txt  data3.bt  data3.txt  teacher.txt  text_with_errors.txt  text_with_errors_corrected.txt  text_with_errors_multithread_corrected.txt
teachable_dictionary/work_with_byte_files/: CMakeLists.txt
teachable_dictionary/work_with_byte_files/include/: work_with_bytes.hpp
teachable_dictionary/work_with_byte_files/src/: work_with_bytes.cpp
teachable_dictionary/work_with_byte_files/tests/: CMakeLists.txt  tests.cpp
