set(READER_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(READER_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/reader.cpp)

cmake_path(GET PROJECT_SOURCE_DIR PARENT_PATH PROJECT_PARRENT_PATH)

set (PROJECT_NAME reader)

include_directories (${READER_INCLUDES})
add_library(${PROJECT_NAME} STATIC ${READER_SOURCE})

add_subdirectory (tests)
